# crawlkit

./: AGENTS.md  Cargo.toml  README.md
crates/crawlkit/: Cargo.toml  README.md
crates/crawlkit-core/: Cargo.toml  README.md
crates/crawlkit-core/src/: client.rs  error.rs  lib.rs  request.rs  response.rs  types.rs
crates/crawlkit-fetcher/: Cargo.toml  README.md
crates/crawlkit-fetcher-reqwest/: Cargo.toml  README.md
crates/crawlkit-fetcher-reqwest/src/: client.rs  lib.rs  user_agent.rs
crates/crawlkit-fetcher-wreq/: Cargo.toml  README.md
crates/crawlkit-fetcher-wreq/src/: client.rs  lib.rs
crates/crawlkit-fetcher/src/: composite.rs  lib.rs
crates/crawlkit-media/: Cargo.toml  README.md
crates/crawlkit-media/src/: audio.rs  documents.rs  downloader.rs  embedded.rs  extractor.rs  images.rs  lib.rs  types.rs  videos.rs
crates/crawlkit-parser/: Cargo.toml  README.md
crates/crawlkit-parser/src/: contact.rs  content.rs  extractor.rs  feeds.rs  fingerprint.rs  forms.rs  html.rs  lib.rs  links.rs  metadata.rs  pagination.rs  parser.rs  rules.rs  selector.rs  selectors.rs  text.rs  types.rs
crates/crawlkit/examples/: batch_crawl.rs  callback.rs  composite_fetcher.rs  custom_client.rs  custom_firecrawl_client.rs  custom_jina_client.rs  custom_service_fallback.rs  extract_article.rs  extract_media.rs  extract_media_advanced.rs  on_html_element.rs  readability.rs  rustcc_news.rs  rustcc_news_concurrent.rs  sequential.rs
crates/crawlkit/src/: collector.rs  lib.rs  log.rs
docs/: colly-research.md  multi-crate-research.md
examples/: batch_crawl.rs  callback.rs  composite_fetcher.rs  custom_client.rs  extract_article.rs
src/: client.rs  collector.rs  error.rs  fetcher.rs  html.rs  lib.rs  request.rs  response.rs  types.rs
