[package]
name = "crawlkit-core"
version = "0.2.0"
edition = "2021"
description = "crawlkit 核心类型、trait 和错误定义，零 HTTP 依赖"

[dependencies]
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
url = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
