[package]
name = "crawlkit-core"
version.workspace = true
edition = "2024"
description = "crawlkit 核心类型、trait 和错误定义，零 HTTP 依赖"
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
url = "2"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
