[package]
name = "crawlkit-fetcher-reqwest"
version = "0.2.0"
edition = "2021"
description = "crawlkit 基于 reqwest 的 HTTP 客户端实现"

[dependencies]
crawlkit-core = { path = "../crawlkit-core" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "zstd"] }
backon = "1.5"
anyhow = "1"
