[package]
name = "crawlkit-fetcher-reqwest"
version = "0.1.0"
edition = "2024"
description = "crawlkit 基于 reqwest 的 HTTP 客户端实现"

[dependencies]
crawlkit-core = { path = "../crawlkit-core",version = "0.1.0" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "zstd"] }
backon = "1.5"
anyhow = "1"
rand = "0.8"
tracing = "0.1"

[lints]
workspace = true
