[package]
name = "crawlkit-fetcher"
version = "0.3.2"
edition = "2024"
description = "crawlkit 组合请求器，可串联多个 HTTP 客户端实现故障转移"
repository.workspace = true
license.workspace = true

[dependencies]
crawlkit-core = { path = "../crawlkit-core", version = "0.4.0" }
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
