[package]
name = "crawlkit-parser"
version.workspace =true
edition = "2024"
description = "crawlkit HTML 解析与内容提取模块"
repository.workspace = true
license.workspace = true

[dependencies]
crawlkit-core = { path = "../crawlkit-core", version = "0.3.0" }
scraper = "0.22"
dom_smoothie = "0.18.0"
url = "2"
skyscraper = "0.6"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
lazy_static = "1"

[lints]
workspace = true
