[package]
name = "crawlkit"
version = "0.4.0"
edition = "2024"
description = "crawlkit Rust 爬虫工具包 — 集成入口（facade crate）"
repository.workspace = true
license.workspace = true

[dependencies]
crawlkit-core = { path = "../crawlkit-core", version = "0.4.0" }
crawlkit-fetcher = { path = "../crawlkit-fetcher", version = "0.3.2" }
crawlkit-fetcher-reqwest = { path = "../crawlkit-fetcher-reqwest", version = "0.3.2", optional = true }
crawlkit-fetcher-wreq = { path = "../crawlkit-fetcher-wreq", version = "0.3.2", optional = true }
crawlkit-parser = { path = "../crawlkit-parser", version = "0.4.0" }
crawlkit-media = { path = "../crawlkit-media", version = "0.3.2", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
regex = "1"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "zstd"] }

[lints]
workspace = true

[features]
default = ["fetcher-reqwest", "media"]
fetcher-reqwest = ["crawlkit-fetcher-reqwest"]
fetcher-wreq = ["crawlkit-fetcher-wreq"]
media = ["crawlkit-media"]

[[example]]
name = "callback"
path = "examples/callback.rs"

[[example]]
name = "extract_article"
path = "examples/extract_article.rs"

[[example]]
name = "batch_crawl"
path = "examples/batch_crawl.rs"

[[example]]
name = "custom_client"
path = "examples/custom_client.rs"

[[example]]
name = "readability"
path = "examples/readability.rs"

[[example]]
name = "composite_fetcher"
path = "examples/composite_fetcher.rs"

[[example]]
name = "custom_jina_client"
path = "examples/custom_jina_client.rs"

[[example]]
name = "custom_firecrawl_client"
path = "examples/custom_firecrawl_client.rs"

[[example]]
name = "custom_service_fallback"
path = "examples/custom_service_fallback.rs"

[[example]]
name = "on_html_element"
path = "examples/on_html_element.rs"

[[example]]
name = "rustcc_news"
path = "examples/rustcc_news.rs"

[[example]]
name = "rustcc_news_concurrent"
path = "examples/rustcc_news_concurrent.rs"

[[example]]
name = "extract_media"
path = "examples/extract_media.rs"

[[example]]
name = "sequential"
path = "examples/sequential.rs"

[[example]]
name = "extract_media_advanced"
path = "examples/extract_media_advanced.rs"
